syntax = "proto3";

package grpc_server;

option go_package = "demo/proto";

message Metric {
    string id = 1;
    string mtype = 2;
    int64 delta = 3;
    double value = 4;
    string hash = 5;
}

message UpdateMetricRequest {
    Metric metric = 1;
}

message UpdateMetricResponse {
    Metric metric = 1;
}

message UpdateManyMetricsRequest {
    repeated Metric metrics = 1;
}

message UpdateManyMetricsResponse {
    repeated Metric metrics = 1;
}

message PingDatabaseRequest{}

message PingDatabaseResponse{}

message GetMetricRequest {
    Metric metric = 1;
}

message GetMetricResponse {
    Metric metric = 1;
}


message GetAllMetricsRequest {}

message GetAllMetricsResponse {
    repeated Metric metrics = 1;
}

service Metrics {
    rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
    rpc UpdateManyMetrics(UpdateManyMetricsRequest) returns (UpdateManyMetricsResponse);
    rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
    rpc GetAllMetrics(GetAllMetricsRequest) returns (GetAllMetricsResponse);
    rpc PingDatabase(PingDatabaseRequest) returns (PingDatabaseResponse);
}
